# clashRoyalLike

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  clashRoyalLike.slnx  docker-compose.yml  vcpkg.json
.github/workflows/: deploy.yml
backend/api-service/: CMakeLists.txt
backend/api-service/src/: main.cpp
backend/battle-server/: CMakeLists.txt
backend/battle-server/src/: main.cpp
clashRoyalLike/: clashRoyalLike.vcxproj  clashRoyalLike.vcxproj.filters
clashRoyalLike/include/: cpp.hint  game.h  platform_common.h  utils.h
clashRoyalLike/src/: game.cpp  w32_platform.cpp
client/: CMakeLists.txt
client/include/: game_logic.h  menu.h  states.h
client/src/: main.cpp
client/src/engine/: game_logic.cpp  menu.cpp
client/src/states/: states.cpp
cmake/: FindBrotli.cmake
common/: CMakeLists.txt  game.proto
common/include/: utils.h
common/src/: dummy.cpp
